<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Transition
        motion:constraintSetEnd="@id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="400"
        motion:motionInterpolator="linear">

        <OnClick motion:targetId="@+id/close" />

        <OnSwipe
            motion:dragDirection="dragUp"
            motion:maxAcceleration="800"

            motion:touchAnchorId="@+id/constraintLayout"
            motion:touchAnchorSide="top" />

        <!--motion:touchRegionId="@id/constraintLayout"-->

    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/my_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            motion:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintHorizontal_bias="0.337"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/audio_list_layout" />

        <Constraint
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/colorPrimary"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:progress="90"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat"
            android:padding="10dp"
            android:visibility="invisible"
            motion:layout_constraintBottom_toTopOf="@id/startTime"
            motion:layout_constraintStart_toStartOf="@+id/constraintLayout"
            motion:srcCompat="@drawable/ic_baseline_repeat_32" />

        <Constraint
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_00_00"
            android:visibility="invisible"
            motion:layout_constraintBottom_toBottomOf="@id/seekBar"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_00_00"
            android:visibility="invisible"
            motion:layout_constraintBottom_toBottomOf="@id/seekBar"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout" />


        <Constraint
            android:id="@+id/albumArtView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/album_art"
            android:src="@drawable/ic_music"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout" />


        <Constraint
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxWidth="200dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintStart_toEndOf="@id/albumArtView"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/close"
            android:padding="10dp"
            android:visibility="invisible"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_keyboard_arrow_down_32" />

        <Constraint
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/playPause"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toStartOf="@+id/next"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_play_arrow_32" />

        <Constraint
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_skip_next_32" />

        <Constraint
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/previous"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toStartOf="@id/playPause"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_skip_previous_32" />


    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">

        <Constraint
            android:id="@+id/my_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            motion:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/audio_list_layout" />

        <Constraint
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:progress="90"
            android:visibility="invisible"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            motion:layout_constraintBottom_toTopOf="@+id/playPause"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat"
            android:padding="10dp"
            motion:layout_constraintBottom_toTopOf="@id/startTime"
            motion:layout_constraintStart_toStartOf="@+id/constraintLayout"
            motion:srcCompat="@drawable/ic_baseline_repeat_32" />

        <Constraint
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/_00_00"
            motion:layout_constraintBottom_toBottomOf="@id/seekBar"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/_00_00"
            motion:layout_constraintBottom_toBottomOf="@id/seekBar"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/albumArtView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/album_art"
            android:src="@drawable/ic_music"
            motion:layout_constraintBottom_toTopOf="@id/titleView"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxWidth="240dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            motion:layout_constraintBottom_toTopOf="@+id/seekBar"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout" />

        <Constraint
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/close"
            android:padding="10dp"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout"
            motion:layout_constraintTop_toTopOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_keyboard_arrow_down_32" />

        <Constraint
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/playPause"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toStartOf="@+id/next"
            motion:layout_constraintStart_toEndOf="@+id/start"
            motion:srcCompat="@drawable/ic_white_baseline_play_arrow_32" />

        <Constraint
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toEndOf="@id/constraintLayout"
            motion:layout_constraintStart_toEndOf="@+id/playPause"
            motion:srcCompat="@drawable/ic_white_baseline_skip_next_32" />

        <Constraint
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/previous"
            android:padding="10dp"
            motion:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            motion:layout_constraintEnd_toStartOf="@+id/playPause"
            motion:layout_constraintHorizontal_bias="0.49"
            motion:layout_constraintStart_toStartOf="@id/constraintLayout"
            motion:srcCompat="@drawable/ic_white_baseline_skip_previous_32" />


    </ConstraintSet>

</MotionScene>